--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,18 +1,26 @@
 .login-box {
-  max-width: 400px;
+  max-width: 500px;
   margin: 20px auto;
 }
+
 .caja {
   width: 100%;
 }
 
 .boton {
-  margin: 10px;
+  margin: 3px;
 }
+
 .login-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.botones-grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 2px;
 }
