--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -17,3 +17,21 @@
     </mat-toolbar-row>
 </mat-toolbar>
 <!-- <button mat-button (click)="autservice.logout()">SALIR</button> -->
+
+
+
+<div class="content">
+    <mat-card class="mat-elevation-z4">
+        <mat-card-header>
+            <mat-card-title>Personas</mat-card-title>
+        </mat-card-header>
+        <img src="../../assets/Img/user_12821.png" class="card-image">
+        <mat-card-content>
+            <p>Gestión de datos de personas</p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-raised-button color="primary">LISTA</button>
+            <button mat-raised-button color="accent" class="boton" (click)="abrirregistrarpersona()">NUEVO</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
