--- a/src/app/registrarpersona/registrarpersona.component.html
+++ b/src/app/registrarpersona/registrarpersona.component.html
@@ -27,6 +27,7 @@
         </form>
     </mat-card-content>
     <mat-card-actions align="end">
-        <button mat-raised-button [mat-dialog-close]="true" color="primary"> GUARDAR </button>
+        <button mat-raised-button [mat-dialog-close]="true" color="primary" (click)="guardar()"> GUARDAR
+        </button>
     </mat-card-actions>
 </mat-card>
